# arc-trait

./: Cargo.toml  LICENSE  README.md
src/: lib.rs
tests/: arc_trait_valid.rs  integration_test.rs
